[tool.poetry]
name = "build_py_project"
version = "0.1.0"
description = "Example for build your python project with offline dependencies"
authors = ["Tiago Geremias <tiagopgeremias@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.19.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
tbuild = "my_module.main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
